Fix dark mode

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -80,4 +80,8 @@
       "rlig" 1,
       "calt" 1;
   }
+
+  main {
+    @apply transition-colors duration-200;
+  }
 }
